resources/css/style.css
* {
  padding: 0;
  margin : 0;
}

/* HEADER RELATED STYLING */

header {
  position: fixed;
  background-color: white;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: solid 1px black;
  z-index: 4;
}

.logo-container {
  display: flex;
  align-items: center;
  padding: 10px 0;
  margin-left: 25px;
}

.logo-container span {
  padding-left: 10px;
  color: rgb(97, 217, 196);
}

header nav {
  margin-right: 40px;
}

header span {
  font-weight: bold;
  font-family: "tahoma";
  font-size: 16px;
}

header a{
  color: black;
  padding-left: 20px;
}

/* MAIN CONTAINER STYLING */

main,
footer {
  position: relative;
  top: 80.8px;
}

main {
  margin: 0 auto;
  padding: 30px 0;
  width: 1300px;
  display: flex;
  justify-content: space-around;
}

main p{
  font-family: georgia;
  font-size: 17px;
}

main h2 {
  font-family: georgia;
  font-size: 30px;
  font-weight: bold;
}

.large-column {
  width: 630px;
}

.mid-column {
  width: 300px;
}

.small-column {
  width: 240px;
}

/* LARGE COLUMN */

.large-column section {
  padding-top: 40px;
  display: flex;
  justify-content: space-between;
}

.small-article,
.img-heading {
  width: 300px;
}

.img-heading {
  height: 300px;
  color: white;
  text-align: center;
  display: flex;
  align-items: center;
}

.supporting {
  background-image: url(../media/img-story-main.PNG);
  height: 300px;
  display: flex;
  align-items: center;
}

.supporting h2 {
  color: white;
  font-size: 40px;
  font-weight: bold;
  text-align: center;
}

.earth-spins {
  background-image: url(../media/img-story-2.PNG);
}

.erase-memory {
  background-image: url(../media/img-story-3.PNG);
}

article p {
  padding-top: 15px;
}

/* MEDIUM COLUMN */

.mid-column .img-heading {
  background-image: url(../media/img-story-1.PNG);
}

.mid-column .small-article {
  padding-bottom: 40px;
}

/* SMALL COLUMN */

.small-column {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.small-column h5 {
  font-size: 16px;
  font-weight: bold;
  padding-bottom: 20px;
}

.small-column ul {
  list-style: none;
  background-color: whitesmoke;
}

.small-column li {
  padding: 10px 15px;
  border-bottom: solid 1px black;
  color: dimgrey;
  font-size: 11px;
  font-family: verdana;
}

/* FOOTER STYLING */

footer {
  font-size: 14px;
  width: 100%;
  height: 400px;
  background-color: MediumAquamarine;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

footer div {
  display: flex;
}

footer .logo span {
  font-size: 16px;
  color: white;
  font-weight: bold;
  padding-right: 25px;
}

footer nav span {
  padding-left: 20px;
}

footer nav a {
  color: black;
}

footer .logo {
  padding-bottom: 20px;
}

